fix: preserve variable order in trace defensive copies